[project]
name = "jlc-choldate"
version = "0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
  "Cython>=0.29.14",
  "numpy",
]

[dependency-groups]
dev = [
  "pre-commit",
  "ruff",
  "unittest2",
]

[build-system]
requires = [
  "Cython",
  "numpy",
  "setuptools",
]

